Update version de java, grizzly, spring, junit