@@ -9,10 +9,11 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
         <jacoco.haltOnFailure>false</jacoco.haltOnFailure>
         <jacoco.version>0.8.1</jacoco.version>
         <jacoco.line.coveredRatio>0.85</jacoco.line.coveredRatio>
@@ -22,25 +23,24 @@
         <sonar.language>java</sonar.language>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.exclusions>**/*Config.java,**/*App.java</sonar.exclusions>
-        <jersey.version>2.25</jersey.version>
+        <jersey.version>2.27</jersey.version>
         <slf4j.version>1.7.25</slf4j.version>
-        <log4j.version>2.7</log4j.version>
+        <log4j.version>2.11.1</log4j.version>
+        <spring.version>4.3.20.RELEASE</spring.version>
         <main.class>com.xabe.binary.protocol.App</main.class>
         <app.config.dir>${project.build.outputDirectory}</app.config.dir>
         <tmp.dir>${project.build.directory}${file.separator}logs</tmp.dir>
         <app.name>circuitBreak</app.name>
         <!-- TEST PROPERTIES -->
         <skipTests>false</skipTests>
-        <surefire.version>2.19.1</surefire.version>
+        <surefire.version>2.22.1</surefire.version>
         <surefire.argline>-Xmx512m</surefire.argline>
         <jacoco.argline>
             -javaagent:${settings.localRepository}${file.separator}org${file.separator}jacoco${file.separator}org.jacoco.agent${file.separator}${jacoco.version}${file.separator}org.jacoco.agent-${jacoco.version}-runtime.jar=destfile=${project.build.directory}${file.separator}coverage-reports${file.separator}jacoco-ut.exec
         </jacoco.argline>
         <skipIntegrationTests>false</skipIntegrationTests>
-        <junit.jupiter.version>5.1.0</junit.jupiter.version>
-        <junit.platform.version>1.1.0</junit.platform.version>
-        <junit.vintage.version>5.1.0</junit.vintage.version>
-        <mockito.version>2.21.0</mockito.version>
+        <junit.jupiter.api.version>5.3.1</junit.jupiter.api.version>
+        <mockito.version>2.23.0</mockito.version>
     </properties>
 
 
@@ -73,16 +73,22 @@
         </dependency>
 
         <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-common</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.glassfish.jersey.ext</groupId>
-            <artifactId>jersey-spring3</artifactId>
-            <version>2.16</version>
+            <artifactId>jersey-spring4</artifactId>
+            <version>${jersey.version}</version>
             <exclusions>
                 <exclusion>
-                    <artifactId>spring-beans</artifactId>
+                    <artifactId>spring-aop</artifactId>
                     <groupId>org.springframework</groupId>
                 </exclusion>
                 <exclusion>
-                    <artifactId>spring-context</artifactId>
+                    <artifactId>spring-beans</artifactId>
                     <groupId>org.springframework</groupId>
                 </exclusion>
                 <exclusion>
@@ -117,19 +123,19 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.8.4</version>
+            <version>2.8.10</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
+            <version>3.8.1</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>4.0</version>
+            <version>4.2</version>
         </dependency>
 
         <!-- Spring -->
@@ -137,25 +143,25 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>4.3.11.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>4.3.11.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.3.11.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>4.3.11.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <!-- log -->
@@ -211,16 +217,16 @@
         <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
-            <version>3.3.7</version>
+            <version>3.4.2</version>
         </dependency>
 
-        <!-- java 9 -->
+        <!-- java 9 and 11
 
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.0</version>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>javax.activation</groupId>
@@ -229,17 +235,67 @@
         </dependency>
 
         <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>javax.activation-api</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>4.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.23.1-GA</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>3.2.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.4.0-b180830.0359</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.4.0-b180830.0438</version>
+        </dependency>
+
+
 
         <!-- CircuitBreak -->
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-actor_2.12</artifactId>
-            <version>2.5.0</version>
+            <version>2.5.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-remote_2.12</artifactId>
+            <version>2.5.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.romix.akka</groupId>
+            <artifactId>akka-kryo-serialization_2.12</artifactId>
+            <version>0.5.1</version>
         </dependency>
 
         <dependency>
@@ -253,7 +309,14 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit.jupiter.version}</version>
+            <version>${junit.jupiter.api.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.api.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -287,7 +350,7 @@
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock</artifactId>
-            <version>2.18.0</version>
+            <version>2.19.0</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -307,7 +370,7 @@
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-testkit_2.12</artifactId>
-            <version>2.5.0</version>
+            <version>2.5.17</version>
             <scope>test</scope>
         </dependency>
 
@@ -380,18 +443,29 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
+                    <release>${java.version}</release>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <!-- update compiler plugin dependency on
+                                ASM for Java 11 compatibility -->
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>6.2</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
                 <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
                     <systemPropertyVariables>
                         <app.log.path>${tmp.dir}</app.log.path>
                     </systemPropertyVariables>
@@ -407,29 +481,27 @@
                         <exclude>**/integrationTest/**/*.java</exclude>
                     </excludes>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit.platform.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>${junit.jupiter.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${surefire.version}</version>
                 <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
                     <systemPropertyVariables>
                         <app.log.path>${tmp.dir}</app.log.path>
                         <app.log.name>circuitBreakTest</app.log.name>
                     </systemPropertyVariables>
                     <skipTests>${skipIntegrationTests}</skipTests>
+                    <forkCount>1</forkCount>
+                    <workingDirectory>${basedir}/target</workingDirectory>
+                    <includes>
+                        <include>**/*IT.java</include>
+                        <include>**/it/**/*.java</include>
+                        <include>**/integrationTest/**/*.java</include>
+                    </includes>
                 </configuration>
                 <executions>
                     <execution>
@@ -439,18 +511,6 @@
                         </goals>
                     </execution>
                 </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit.platform.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>${junit.jupiter.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -624,7 +684,7 @@
                             <name>app</name>
                             <waitForInterrupt>false</waitForInterrupt>
                             <healthcheckUrl>http://localhost:8008/v1/status</healthcheckUrl>
-                            <waitAfterLaunch>30</waitAfterLaunch>
+                            <waitAfterLaunch>15</waitAfterLaunch>
                             <processLogFile>${project.build.directory}/logs/console.out</processLogFile>
                             <arguments>
                                 <argument>java</argument>
@@ -633,8 +693,7 @@
                                 <argument>-XX:MetaspaceSize=128M</argument>
                                 <argument>-XX:MaxMetaspaceSize=128M</argument>
                                 <argument>-Xss512K</argument>
-                                <argument>--add-modules=java.xml.bind,java.activation</argument>
-                                <argument>--illegal-access=warn</argument>
+                                <argument>--illegal-access=permit</argument>
                                 <argument>-Dspring.profiles.active=test</argument>
                                 <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8001</argument>
                                 <argument>-Dorg.jboss.logging.provider=slf4j</argument>
